# click-man

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: ci.yaml
click_man/: __main__.py  core.py  man.py  shell.py
click_man/commands/: __init__.py  man_pages.py
examples/debian_pkg/: setup.py
examples/debian_pkg/debian/: changelog  control  manpages  rules
examples/debian_pkg/repo/: __main__.py
tests/: test_man.py  test_shell.py
